--- a/index.html
+++ b/index.html
@@ -69,19 +69,19 @@
                 <tr>
                     <td>1</td>
                     <td>Project Alpha</td>
-                    <td><a href="https://johnson-frontend.github.io/all">https://johnson-frontend.github.io/all/</a></td>
+                    <td><a href="https://johnson-frontend.github.io/all/index.html">https://johnson-frontend.github.io/all/index.html/</a></td>
                     <td><span class="status-active">Active</span></td>
                 </tr>
                 <tr>
                     <td>2</td>
                     <td>Project Beta</td>
-                    <td><a href="https://johnson-frontend.github.io/all">https://johnson-frontend.github.io/all/</a></td>
+                    <td><a href="https://johnson-frontend.github.io/all/index.html">https://johnson-frontend.github.io/all/index.html/</a></td>
                     <td><span class="status-pending">Pending</span></td>
                 </tr>
                 <tr>
                     <td>3</td>
                     <td>Project Gamma</td>
-                    <td><a href="https://johnson-frontend.github.io/all">https://johnson-frontend.github.io/all/</a></td>
+                    <td><a href="https://johnson-frontend.github.io/all/index.html">https://johnson-frontend.github.io/all/index.html/</a></td>
                     <td><span class="status-inactive">Inactive</span></td>
                 </tr>
             </tbody>
